# django-hybrid-attributes

./: .bumpversion.cfg  .travis.yml  LICENSE  README.md  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
django_hybrid_attributes/: __init__.py  core.py  decorators.py  managers.py  test_utils.py
tests/: models.py  test_models.py  test_readme_example.py  test_test_utils.py
