[metadata]
name = django-hybrid-attributes
version = 0.0.1
description = A Django plugin for mimicking the power of SQLAlchemy hybrid_property and hybrid_method
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Waitman
author_email = filwaitman@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/filwaitman/django-hybrid-attributes

[options]
include_package_data = true
packages = django_hybrid_attributes

[flake8]
max-line-length = 132
exclude = .tox,.git
ignore = F405,W504

[isort]
line_length = 132
multi_line_output = 5
known_django = django
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[coverage:run]
source = django_hybrid_attributes
